--- a/bundle.yaml
+++ b/bundle.yaml
@@ -3,10 +3,10 @@ description: |
   SGE cluster bundle
 applications:
   sge-master:
-    charm: cs:~taihsiangho/sge-master-0
+    charm: cs:~tai271828/sge-master-0
     num_units: 1
   sge-client:
-    charm: cs:~taihsiangho/sge-client-0
+    charm: cs:~tai271828/sge-client-0
     num_units: 2
 relations:
   - [sge-master, sge-client]
